src/test/deca/syntax/valid/extension/Array.deca


{
        int[] x = new INT[2];
}
