src/test/deca/syntax/invalid/extension/WrongSelection.deca
{
	int[][] mat = new int[5][5];
	mat[3][] = 0;
}